--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
     <uses-permission android:name="android.permission.SEND_SMS"/>
     <!--接受短信权限-->
     <uses-permission android:name="android.permission.RECEIVE_SMS"/>
+    <!--定位权限-->
+    <!--获取粗略位置坐标的权限(网络定位使用)-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <!--获取准确GPS坐标权限-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:allowBackup="true"
@@ -55,6 +60,8 @@
                 <action android:name="android.provider.Telephony.SMS_RECEIVED"/>
             </intent-filter>
         </receiver>
+
+        <service android:name=".service.LocationService"/>
     </application>
 
 </manifest>
